app/assets/stylesheets/main.scss
body {
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;
}

input, button {
  font-size: inherit;
}

table, td, th {
  border: 1px solid black;
  border-collapse: collapse;
}

th, td {
  padding: 0.4rem;
}

ul, ol {
  padding-left: 1rem;
}

.debug_dump {
  margin-top: 3rem;
  padding: 1rem;
  border: 1px solid gray;
  border-radius: 5px;
  font-size: 1rem;
}

.error {
  color: red;
}

.map-overlay {
  position: absolute;
  width: calc(min(96vw, 400px));
  background-color: #fff;
  border-radius: 5px;
  z-index: 1;
  border: 1px solid gray;
  padding: 1rem 2rem;
  min-height: 200px;

  .rating {
    color: #333;
  }
}

.hidden {
  display: none;
}

